ScrollBar changed and nav fixed

--- a/app/assets/sass/_main-box.sass
+++ b/app/assets/sass/_main-box.sass
@@ -13,6 +13,8 @@
     padding: .7em 6em 1em 1em
     margin: 0
   .nav_box
+    position: fixed
+    width: 95%
     &.with_feedback
       margin-top: 3.9em
     .nav_position
