--- a/app/assets/sass/_mixins.sass
+++ b/app/assets/sass/_mixins.sass
@@ -36,10 +36,10 @@ $media15: 320px
 //----------- CURSORS ------------
 
 @mixin cursor
- cursor: url('../images/cursors/cursor_black.png'), url('../images/cursors/cursor_black.cur'), default
+ cursor: url('../images/cursors/cursor_black.png'), url('../images/cursors/cursor_black.cur'), default !important
 
 @mixin hand_cursor
- cursor: url('../images/cursors/hand_cursor_black.png') 8 0, url('../images/cursors/hand_cursor_black.cur') 8 0, default
+ cursor: url('../images/cursors/hand_cursor_black.png') 8 0, url('../images/cursors/hand_cursor_black.cur') 8 0, default !important 
 
 
 
